:sparkles: improve the functions related to commenting on images
